kubernetes/goodbye-grpc-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: goodbye-grpc-deployment
  labels:
    app: goodbye-grpc
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goodbye-grpc
  template:
    metadata:
      labels:
        app: goodbye-grpc
    spec:
      containers:
      - image: cwsakamoto/goodbye-grpc:latest
        imagePullPolicy: Always
        name: goodbye-grpc
        ports:
        - name: grpc
          containerPort: 8999
