kubernetes/hello-grpc-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hello-grpc-deployment
  labels:
    app: hello-grpc
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-grpc
  template:
    metadata:
      labels:
        app: hello-grpc
    spec:
      containers:
      - image: cwsakamoto/hello-grpc:latest
        imagePullPolicy: Always
        name: hello-grpc
        ports:
        - name: grpc
          containerPort: 8999
