kubernetes/goodbye-grpc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goodbye-grpc
  name: goodbye-grpc
  namespace: test
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8999
    protocol: TCP
    targetPort: 8999
  selector:
    app: goodbye-grpc
